GNOME Bugzilla – Bug 677466
gstrtspconnection: GSocket and GSocketAddress leaks
Last modified: 2012-06-06 12:54:46 UTC
Created attachment 215640 [details] [review] Fix memory leaks in gst_rtsp_connection_accept The GstRTSPConnection created in gst_rtsp_connection_accept keeps two references to the client GSocket, which are unreffed when the connection is freed. The third reference, returned by g_socket_accept, is not unreffed and there is a GSocket leak. The GSocketAddress reference returned by the call to g_socket_get_remote_address in gst_rtsp_connection_accept is also not unreffed. According to the documentation for g_socket_get_remote_address, it should be unreffed. I've attached a patch for fixing these problems.
commit 0b0dde7ce11e15bedaf34aea2df843a5253d1e2f Author: David Svensson Fors <davidsf at axis.com> Date: Wed Jun 6 14:53:43 2012 +0200 rtsp: don't leak address and socket Fixes https://bugzilla.gnome.org/show_bug.cgi?id=677466