rtsp: don't leak address and socket

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=677466